another intermediate commit